<resources>
    <string name="app_name">Dubai2BD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">Wish List</string>
    <string name="search">Shopping Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Orders</string>
    <string name="menu_track_order">Track Order</string>
    <string name="menu_slideshow">Dashboard</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="search_product">Search</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="recent_product">Recent Products</string>
    <string name="life_style">Life Style</string>
    <string name="exclusive_pro">Exclusive Products</string>
    <string name="footer_txt">Developed by SBIT</string>
    <string name="flash_txt">Flash Sale</string>
    <string name="shop_t">Shop</string>
    <string name="title_activity_login">Dubai2BD</string>
    <string name="prompt_email">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Don\'t have an Account?</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="verbtn">Verify</string>
    <string name="view_cart">Buy Now</string>
    <string name="delete_selected_item">Delete Selected Item</string>
    <string name="all">All</string>
    <string name="signup">Sign up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="check_out">check out</string>
    <string name="total">Total:</string>
    <string name="ship">Shipping Ch.:</string>
    <string name="net">Net T.:</string>
    <string name="product_name">Product Name</string>
    <string name="out_stock">Stock Out</string>
    <string name="in_stock">In Stock</string>
    <string name="description">Description</string>
    <string name="releted_t">Releted Product</string>
    <string name="ordered_on">ORDERED ON</string>
    <string name="oid">OID-</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="edit_personal_info">Edit Personal Info</string>
    <string name="ch_pass_info">Change Password</string>
    <string name="add_info">Address</string>
    <string name="mobile_no">Mobile NO</string>
    <string name="code">Code</string>
    <string name="tran_id">Transaction ID</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="y_ques">Your Question</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_ph">Email/Phone</string>
    <string name="town">Town</string>
    <string name="del_add">Full Address for Delivery</string>
    <string name="prormo">Promo Code</string>
    <string name="country">Select Country</string>
    <string name="district">Select District</string>
    <string name="thana_t">Select Thana</string>
    <string name="address">Delivery Address</string>
    <string name="registration">Registration</string>
    <string name="update_pro">Update Profile</string>
    <string name="already">Already have an account. SIGN IN</string>
    <string name="verify">Set your Info</string>
    <string name="v_text">A code is sent to your number, please check messages and enter here.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="sign_in">Login</string>
    <string name="sign">Sign in</string>
    <string name="dev">Privacy Policy</string>
    <string name="terms">Terms And Conditions</string>
    <string name="faq">FAQ</string>
    <string name="s_login">Member Login</string>
    <string name="s_reg">Member Registration</string>
    <string name="cart_h">Go to Home</string>
    <string name="sign_out">Log Out</string>
    <string name="billing_details">Billing Details</string>
    <string name="order_details">Order Preview</string>
    <string name="pay_details">Payment Method</string>
    <string name="mini_quant">Minimum Quantity :</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount :</string>
    <string name="grand">Grand Total :</string>
    <string name="delivery">Delivery Charge :</string>
    <string name="apply_promo">Apply Promo</string>
    <string name="send">Send</string>
    <string name="verifyF">Verify your number</string>
    <string name="verifyT">A code is sent to your number, please check messages and enter here.</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="bkash">Bkash</string>
    <string name="rocket">Rocket</string>
    <string name="nagad">Nagad</string>
    <string name="place_order">Place Order</string>
    <string name="new_pro">New Product</string>
    <string name="empty_cart_des">You have no items in your shopping cart. Click Home to continue shopping.</string>
    <string name="show_more">Show More</string>
    <string name="about_salesman_bd">About Dubai2BD</string>
    <string name="privacy">Our Privacy Policy</string>
    <string name="contact_T">Let\'s Get in Touch</string>
    <string name="Login">login</string>
    <string name="order_id">Order ID :</string>
    <string name="amount">Amount:</string>
    <string name="order_pending">Order Pending by Dubai2BD</string>
    <string name="order_process">Order Processing by Dubai2BD</string>
    <string name="order_way">Order on the way</string>
    <string name="order_success">Order Successfully Submitted</string>
    <string name="delivery_date">Delivery Date : Between</string>
    <string name="delivery_address">Delivery Address :</string>
    <string name="title_activity_flash_screen">FullscreenActivity</string>
    <string name="dummy_button">Bar Out</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="online_market_place">Online Market Place</string>
    <string name="order_not_found">Currently you don\'t placed any order</string>
    <string name="our_all_item">Our All Item</string>
    <string name="our_back_office">Our Back Office</string>
    <string name="trunk_road_feni">Mirpur,Dhaka-Bangladesh</string>
    <string name="invoice_num">+889911358602</string>
    <string name="first_email">Email: demo.example@gmail.com</string>
    <string name="second_email"></string>
    <string name="invoice_id">Invoice ID :</string>
    <string name="order_date">Order Date :</string>
    <string name="payment_type">Payment Type :</string>
    <string name="del_d">Delivery Date :</string>
    <string name="go_to_shopping">Go To Shopping</string>
    <string name="screen">* Take a screenshot for the next need</string>
    <string name="title_activity_image_fullview">Product Image</string>
    <string name="quantity">Quantity :</string>
    <string name="sign_text">Please Login and enjoy your shopping</string>
    <string name="sign_up_txt">Please Registration and enjoy your shopping</string>
    <string name="buy_earn"><![CDATA[BUY & EARN]]></string>
    <string name="online_payment">Online Payment</string>
    <string name="payment_details">Payment Details</string>
    <string name="_0_tk">0 TK</string>
    <string name="paid">Paid:</string>
    <string name="due">Due:</string>
    <string name="make_payment">Make Payment</string>
    <string name="contact_with_09642887766">Contact with 09642887766</string>
    <string name="bkash_payment">bKash Payment</string>
    <string name="submit">Submit</string>
    <string name="type">Type :</string>
    <string name="number">Number :</string>
    <string name="payment_date">Payment Date</string>
</resources>