<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sbitbd.dubai2bd.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sbitbd.dubai2bd.ui.gallery.GalleryFragment"
        android:label="@string/menu_track_order"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sbitbd.dubai2bd.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_product"
        android:name="com.sbitbd.dubai2bd.ui.new_product.new_pro"
        android:label="@string/new_pro"
        tools:layout="@layout/new_pro_fragment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.sbitbd.dubai2bd.ui.about.about"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.sbitbd.dubai2bd.ui.contact.contact"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_fragment" />
    <fragment
        android:id="@+id/nav_slogin"
        android:name="com.sbitbd.dubai2bd.ui.seller_login.seller_login"
        android:label="@string/s_login"
        tools:layout="@layout/seller_login_fragment" />
    <fragment
        android:id="@+id/nav_sreg"
        android:name="com.sbitbd.dubai2bd.ui.seller_reg.seller_reg"
        android:label="@string/s_reg"
        tools:layout="@layout/seller_reg_fragment" />
    <fragment
        android:id="@+id/nav_developer"
        android:name="com.sbitbd.dubai2bd.ui.developer.developer_page"
        android:label="@string/dev"
        tools:layout="@layout/fragment_developer_page" />
    <fragment
        android:id="@+id/nav_terms_cond"
        android:name="com.sbitbd.dubai2bd.terms_cond"
        android:label="@string/terms"
        tools:layout="@layout/fragment_terms_cond" />
    <fragment
        android:id="@+id/nav_faq"
        android:name="com.sbitbd.dubai2bd.ui.faq.faq"
        android:label="@string/faq"
        tools:layout="@layout/fragment_faq" />
</navigation>